--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/wvanderp/musicTime/issues"
   },
-  "homepage": "https://github.com/wvanderp/musicTime#readme"
+  "homepage": "https://github.com/wvanderp/musicTime#readme",
+  "dependencies": {
+    "sha1": "^1.1.1"
+  }
 }
